--- a/more/index.html
+++ b/more/index.html
@@ -6,18 +6,33 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link href="/css/more/addCss.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
+    <h1 class="display-4 m-3 text-center">Customize Messenger's appearance by css</h1>
+    <div class="container rounded bg-white p-3 mt-5">
+        <div class="code">
+            <label>Css code</label>
+            <textarea spellcheck="false" id="code" class="" placeholder="Insert css code here. If you don't know css, you can quick learn it with some links below."></textarea>
+        </div>
+    </div>
+    <div class="container rounded bg-white p-3 mt-5 d-flex justify-content-between">
+        <div>
+            <a target="_blank" class="btn btn-outline-danger m-1" href="https://cssminifier.com/"> Minify css</a>
+            <a target="_blank" class="btn btn-outline-primary m-1" href="https://unminify.com/"> unminify css</a>
+            <a target="_blank" class="btn btn-outline-dark m-1" href="https://www.w3schools.com/css/">Learn css</a>
+            <a target="_blank" class="btn btn-outline-success m-1" href="#">Some classes in Messenger</a>
+        </div>
+        <div>
+            <button class="btn btn-primary m-1" id="saveCssCode">Save</button>
+        </div>
+    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="/js/core.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
