add some feature

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="m-2">
-        <a class="btn btn-primary btn-lg btn-block" target="_blank" href="./more/index.html">More setting</a>
+        <a class="btn btn-primary btn-lg btn-block" target="_blank" href="./more/css.html">More setting</a>
     </div>
 
     <!-- Optional JavaScript -->
