--- a/more/css.html
+++ b/more/css.html
@@ -7,19 +7,33 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="/css/more/addCss.css" rel="stylesheet">
+    <link href="/css/more/common.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/lib/css/all.css">
 </head>
 
 <body>
-    <h1 class="display-4 m-3 text-center">Customize Messenger's appearance by css</h1>
+    <div class="container d-flex justify-content-center m-nav">
+        <a class="l-btn l-active" href="./css.html">
+            <i class="fas fa-terminal"></i>
+        </a>
+        <a class="l-btn" href="./friend.html">
+            <i class="fas fa-users"></i>
+        </a>
+        <a class="l-btn" href="">
+            <i class="fas fa-file-export"></i>
+        </a>
+    </div>
+
+    <h1 class="display-4 m-3 text-center text-white">Customize Messenger's appearance</h1>
     <div class="container rounded bg-white p-3 mt-5">
         <div class="code">
             <label>Css code</label>
             <textarea spellcheck="false" id="code" class="" placeholder="Insert css code here. If you don't know css, you can quick learn it with some links below."></textarea>
         </div>
     </div>
-    <div class="container rounded bg-white p-3 mt-5 d-flex justify-content-between">
+    <div class="container rounded bg-white p-2 mt-5 d-flex justify-content-between">
         <div>
             <a target="_blank" class="btn btn-outline-danger m-1" href="https://cssminifier.com/"> Minify css</a>
             <a target="_blank" class="btn btn-outline-primary m-1" href="https://unminify.com/"> unminify css</a>
