--- a/index.html
+++ b/index.html
@@ -9,24 +9,15 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/popup/index.css"> </link>
+    <link rel="stylesheet" href="./css/ex/common.css">
+    </link>
+    <link rel="stylesheet" href="./css/ex/index.css">
+    </link>
+
 </head>
 
 
 <body>
-    <div class="container rounded bg-white m-2">
-        <div class="content">
-            <label>
-                Apply for
-            </label>
-            <div class="option">
-                <select>
-                    <option>For all</option>
-                    <option>This friend</option>
-                </select>
-            </div>
-        </div>
-    </div>
     <div class="container rounded bg-white m-2">
         <div class="content">
             <label>
@@ -46,9 +37,9 @@
                 Style
             </label>
             <div class="option">
-                <select>
-                    <option>For all</option>
-                    <option>This friend</option>
+                <select id="style_mode">
+                    <option>Light mode</option>
+                    <option>My mode</option>
                 </select>
             </div>
         </div>
