--- a/more/friend.html
+++ b/more/friend.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>More Settings</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="/css/more/friend.css" rel="stylesheet">
-    <link href="/css/more/common.css" rel="stylesheet">
+    <link href="/css/ex/friend.css" rel="stylesheet">
+    <link href="/css/ex/common.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/lib/css/all.css">
@@ -21,34 +21,25 @@
         <a class="l-btn l-active" href="./friend.html">
             <i class="fas fa-users"></i>
         </a>
-        <a class="l-btn" href="">
+        <a class="l-btn" href="./export.html">
             <i class="fas fa-file-export"></i>
         </a>
     </div>
-
-    <div class="mt-5 p-3 rounded container wrap">
-        <div class="p-3 container d-flex panel justify-content-around">
-            <input type="text">
-            <input type="text">
-            <div class="tool d-flex justify-content-between">
-                <button class="red"> <i class="fas fa-minus-circle"></i> </button>
-                <button class="blue"> <i class="fas fa-save"></i> </button>
-            </div>
-        </div>
-        <div class="p-3 container d-flex panel justify-content-around">
-            <input type="text">
-            <input type="text">
-            <div class="tool d-flex justify-content-between">
-                <button class="red"> <i class="fas fa-minus-circle"></i> </button>
-                <button class="blue"> <i class="fas fa-save"></i> </button>
-            </div>
+    <div class="mt-5 pt-3 pr-3 pl-3 rounded container">
+        <div>
+            <button id="btn_add" class="btn btn-primary">Add new</button>
         </div>
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <div class="p-3 rounded container">
+        <input id="uid" type="text" class="" placeholder="uid">
+        <input id="url" type="text" class="ml-5" placeholder="url">
+    </div>
+
+    <div class="mt-3 p-3 rounded container wrap" id="wrap">
+    </div>
+
+    <script src="/js/core.js"></script>
+    <script src="/js/friend.js"></script>
 </body>
 
 </html>
