--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container rounded bg-white m-2">
         <div class="content">
             <label>
-                Link image
+                Link ảnh
             </label>
             <div class="option">
                 <input type="text" id="inp_img">
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="m-2">
-        <a class="btn btn-primary btn-lg btn-block" target="_blank" href="./more/css.html">More setting</a>
+        <a class="btn btn-primary btn-lg btn-block" target="_blank" href="./more/css.html">More settings</a>
     </div>
 
     <!-- Optional JavaScript -->
