--- a/more/css.html
+++ b/more/css.html
@@ -43,7 +43,7 @@
     <div class="container rounded bg-white p-2 mt-5 d-flex justify-content-between">
         <div>
             <a target="_blank" class="btn btn-outline-danger m-1" href="https://cssminifier.com/"> Minify css</a>
-            <a target="_blank" class="btn btn-outline-primary m-1" href="https://unminify.com/"> unminify css</a>
+            <a target="_blank" class="btn btn-outline-primary m-1" href="https://unminify.com/"> Unminify css</a>
             <a target="_blank" class="btn btn-outline-dark m-1" href="https://www.w3schools.com/css/">Learn css</a>
             <a target="_blank" class="btn btn-outline-success m-1" href="#">Some classes in Messenger</a>
         </div>
