--- a/more/export.html
+++ b/more/export.html
@@ -36,9 +36,9 @@
 
     <div class="container rounded bg-white p-2 mt-5 d-flex justify-content-between">
         <div>
-            <button class="btn btn-success m-1" id="btn_style">Get style</button>
-            <button class="btn btn-info m-1" id="btn_set">Get setting</button>
-            <button class="btn btn-danger m-1" id="btn_restore">Restore settings</button>
+            <button class="btn btn-success m-1" id="btn_style">Lấy style</button>
+            <button class="btn btn-info m-1" id="btn_set">Lấy cài đặt</button>
+            <button class="btn btn-danger m-1" id="btn_restore">Khôi phục cài đặt gốc</button>
         </div>
         <div>
             <button class="btn btn-primary m-1" id="btn_save">Save</button>
