--- a/index.html
+++ b/index.html
@@ -2,20 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/ex/common.css">
-    </link>
-    <link rel="stylesheet" href="./css/ex/index.css">
-    </link>
-
+    <link rel="stylesheet" href="./css/ex/common.css"></link>
+    <link rel="stylesheet" href="./css/ex/index.css"></link>
 </head>
-
 
 <body>
     <div class="container rounded bg-white m-2">
@@ -45,7 +35,7 @@
         </div>
     </div>
     <div class="m-2">
-        <a class="btn btn-primary btn-lg btn-block" target="_blank" href="./more/css.html">More settings</a>
+        <a class="btn btn-primary btn-lg btn-block" target="_blank" href="./more/style.html">More settings</a>
     </div>
 
     <!-- Optional JavaScript -->
