--- a/more/style.html
+++ b/more/style.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="/css/ex/addCss.css" rel="stylesheet">
+    <link href="/css/ex/stylePage.css" rel="stylesheet">
     <link href="/css/ex/common.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -37,6 +37,11 @@
                     </select>
                 </div>
             </div>
+            <div>
+                <p>
+
+                </p>
+            </div>
             <textarea spellcheck="false" id="code" class="" placeholder="Insert css code here. If you don't know css, you can quick learn it with some links below."></textarea>
         </div>
     </div>
@@ -53,7 +58,7 @@
     </div>
 
     <script src="/js/core.js"></script>
-    <script src="/js/css.js"></script>
+    <script src="/js/_stylePage.js"></script>
 </body>
 
 </html>
