--- a/more/export.html
+++ b/more/export.html
@@ -2,16 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>export</title>
-    <!-- Required meta tags -->
+    <title>Export Settings</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="/css/ex/export.css" rel="stylesheet">
+    <link href="/css/ex/exportPage.css" rel="stylesheet">
     <link href="/css/ex/common.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/lib/css/all.css">
+    <link href="/assets/lib/css/all.css" rel="stylesheet">
 </head>
 
 <body>
@@ -47,7 +45,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="/js/core.js"></script>
-    <script src="/js/export.js"></script>
+    <script src="/js/_exportPage.js"></script>
 </body>
 
 </html>
