--- a/more/imageId.html
+++ b/more/imageId.html
@@ -6,9 +6,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="/css/ex/friend.css" rel="stylesheet">
+    <link href="/css/ex/imageIdPage.css" rel="stylesheet">
     <link href="/css/ex/common.css" rel="stylesheet">
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/lib/css/all.css">
 </head>
@@ -39,7 +38,7 @@
     </div>
 
     <script src="/js/core.js"></script>
-    <script src="/js/friend.js"></script>
+    <script src="/js/_imageIdPage.js"></script>
 </body>
 
 </html>
