--- a/more/export.html
+++ b/more/export.html
@@ -46,6 +46,9 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="/js/core.js"></script>
     <script src="/js/_exportPage.js"></script>
+    <script>
+        console.log("ahaha");
+    </script>
 </body>
 
 </html>
