--- a/settings/export.html
+++ b/settings/export.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="/css/ex/exportPage.css" rel="stylesheet">
-    <link href="/css/ex/common.css" rel="stylesheet">
+    <link href="./css/exportPage.css" rel="stylesheet">
+    <link href="./css/common.css" rel="stylesheet">
     <link href="/assets/lib/css/all.css" rel="stylesheet">
 </head>
 
@@ -42,13 +42,8 @@
             <button class="btn btn-primary m-1" id="btn_save">Save</button>
         </div>
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/js/core.js"></script>
-    <script src="/js/_exportPage.js"></script>
-    <script>
-        console.log("ahaha");
-    </script>
+    <script src="/js/core/core.js"></script>
+    <script src="./js/page/_exportPage.js"></script>
 </body>
 
 </html>
