--- a/settings/style.html
+++ b/settings/style.html
@@ -3,14 +3,10 @@
 
 <head>
     <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="/css/ex/stylePage.css" rel="stylesheet">
-    <link href="/css/ex/common.css" rel="stylesheet">
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/lib/css/all.css">
+    <link href="./css/stylePage.css" rel="stylesheet">
+    <link href="./css/common.css" rel="stylesheet">
+    <link href="/assets/lib/css/all.css" rel="stylesheet">
 </head>
 
 <body>
@@ -57,8 +53,8 @@
         </div>
     </div>
 
-    <script src="/js/core.js"></script>
-    <script src="/js/_stylePage.js"></script>
+    <script src="/js/core/core.js"></script>
+    <script src="./js/page/_stylePage.js"></script>
 </body>
 
 </html>
