--- a/settings/imageId.html
+++ b/settings/imageId.html
@@ -3,13 +3,10 @@
 
 <head>
     <title>More Settings</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="/css/ex/imageIdPage.css" rel="stylesheet">
-    <link href="/css/ex/common.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/lib/css/all.css">
+    <link href="./css/imageIdPage.css" rel="stylesheet">
+    <link href="./css/common.css" rel="stylesheet">
+    <link href="/assets/lib/css/all.css" rel="stylesheet">
 </head>
 
 <body>
@@ -37,8 +34,8 @@
     <div class="mt-3 p-3 rounded container wrap" id="wrap">
     </div>
 
-    <script src="/js/core.js"></script>
-    <script src="/js/_imageIdPage.js"></script>
+    <script src="/js/core/core.js"></script>
+    <script src="./js/page/_imageIdPage.js"></script>
 </body>
 
 </html>
